# slcp-offsetting

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml
notebooks/: 00_sandbox.ipynb  01_generate_ca_timeseries.ipynb  02a_ca_analysis.ipynb  02b_corsia_analysis.ipynb
timeseries-data/: .gitignore  FaIR_CARB.py  FaIR_CARB_Actual.py  ca-emissions-timeseries.ipynb  ca-offset-timeseries.ipynb  ca-timeseries.ipynb  sandbox.ipynb
timeseries-data/input-data/: nc-arboc_issuance.xlsx
timeseries-data/input-data/compliance-reports/: 2013-2014compliancereport.xlsx  2015-2017compliancereport.xlsx  nc-2018-2020compliancereport.xlsx  nc-2024compliancereport.xlsx  nc-CP4compliancereport.xlsx
timeseries-data/output-data/: ca_credits_by_metric.csv  ca_justified_emissions_fluxes.csv  ca_likeforlike_fluxes.csv  ca_project_fluxes.csv  timeseries_covered_emissions.csv  timeseries_emission_fluxes.csv  timeseries_project_fluxes.csv
