[project]
name = "slcp-offsetting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "s3fs>=2026.3.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
coiled-deploy = [
    "coiled>=1.133.1",
    "ipykernel>=7.2.0",
]
lint = [
    "prek>=0.3.8",
    "ruff>=0.15.9",
]
test = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]


