[project]
    dependencies    = []
    description     = "Add your description here"
    name            = "slcp-offsetting"
    readme          = "README.md"
    requires-python = ">=3.13.5"
    version         = "0.1.0"

[dependency-groups]
    coiled-deploy = ["coiled>=1.133.1"]
    lint          = ["prek>=0.3.8", "ruff>=0.15.9"]
    test          = ["pytest-xdist>=3.8.0", "pytest>=9.0.2"]

[tool.pixi.workspace]
    channels  = ["conda-forge"]
    platforms = ["osx-arm64"]

[tool.pixi.dependencies]
    jupyterlab = ">=4.5.7,<5"
    matplotlib = ">=3.10.9,<4"
    pandas     = ">=3.0.2,<4"
    s3fs       = ">=2026.4.0,<2027"
    seaborn    = ">=0.13.2,<0.14"

[tool.pixi.pypi-dependencies]
    slcp-offsetting = { path = ".", editable = true }

[tool.pixi.environments]
    coiled-deploy = { features = ["coiled-deploy"], solve-group = "default" }
    default       = { solve-group = "default" }
    lint          = { features = ["lint"], solve-group = "default" }
    test          = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
